working  version of the project V1.0

--- a/Examen-practicum/src/main/resources/application.properties
+++ b/Examen-practicum/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url= jdbc:h2:mem:mydb
+spring.datasource.username= sa
+spring.datasource.password= password
+spring.h2.console.enabled= true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+
+#spring.jpa.hibernate.ddl-auto=none
+
+#If you want to execute test funtions you need to uncomment code above. So data.sql and schema.sql will be used by hibernate to generate schemas and insert data.
+# And those objects will be used during end2end test.
+
+# none -> hibernategebruikt de database zoals extern geconfigureerd
+# create-drop -> idem als create, maar verwijder schema als applicatie stopt --> default for H2 Database (In-Memory Database)
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
